Local tag bug fixed
Former-commit-id: 9bde869936729f14c88c785e562540deeafc2ff5

--- a/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
@@ -191,7 +191,7 @@
 						<h:panelGroup rendered="#{organization.identifier == null || organization.identifier == ''}" styleClass="xSmall_area0 ouLink">&nbsp;</h:panelGroup>					
 						<h:panelGroup styleClass="large_area0_p8 lineToolSection">
 							<tr:commandButton id="btnAddCreatorPersonAffiliation" styleClass="min_imgBtn groupTool add" text=" " shortDesc="#{tip.EditItem_addOrga}" action="#{organization.add}" rendered="#{genre.sources_source_person_organization_source_organizations_repeatable != 'false'}"/>
-							<tr:commandButton id="btnRemoveCreatorPersonAffiliation" styleClass="min_imgBtn groupTool remove" text=" " shortDesc="#{tip.EditItem_removeOrga}" disabled="#{EditItemSessionBean.organizationCount == 1}" action="#{organization.remove}" rendered="#{genre.sources_source_person_organization_source_organizations_repeatable != 'false'}"/>
+							<tr:commandButton id="btnRemoveCreatorPersonAffiliation" styleClass="min_imgBtn groupTool remove" text=" " shortDesc="#{tip.EditItem_removeOrga}" disabled="#{sourceBean.organizationCount == 1}" action="#{organization.remove}" rendered="#{genre.sources_source_person_organization_source_organizations_repeatable != 'false'}"/>
 						</h:panelGroup>
 					</h:panelGroup>
 				</tr:iterator>
