Former-commit-id: 81f66c976c62241d6b2e89b81d5d6aa6220bf65b

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/BasicGroup.jspf
@@ -73,7 +73,7 @@
 		</div>
 
 <%-- Latest version URL URL --%>
-		<h:panelGroup styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!ViewItemFull.isLatestVersion}" >
+		<h:panelGroup styleClass="free_area0 endline itemLine" rendered="#{!ViewItemFull.isLatestVersion}" >
 			<b class="xLarge_area0_p8 endline labelLine clear">
 				<h:outputText value="#{lbl.ViewItemFull_lblLatestVersion}" /><span class="noDisplay">: </span>
 			</b>
