--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/main.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/main.css
@@ -2,7 +2,7 @@
 
 /*
 *
-* CDDL HEADER START
+* CDDL HEADER START blah
 *
 * The contents of this file are subject to the terms of the
 * Common Development and Distribution License, Version 1.0 only
