--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -137,7 +137,7 @@
 					<h:outputText value="#{lbl.ViewItemFull_lblFulltextSearchResults}"/><span class="noDisplay">: <br /></span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<tr:iterator var="hit" value="#{file.searchHits}" binding="#{ViewItemFull.fileSearchHitIterator}" varStatus="index">
+					<tr:iterator var="hit" value="#{file.searchHits}" varStatus="index">
 						<h:panelGroup styleClass="xHuge_area0">
 							<h:outputText value="#{hit.beforeSearchHitString}"/>
 								<h:outputText value='<em class="searchHit">' escape="false"/>
