--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemMedium.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemMedium.jspf
@@ -120,11 +120,18 @@
 			<h:outputText value="#{lbl.ViewItemFull_lblFulltextSearchResults}" /><span class="noDisplay">: </span>
 		</span>
 		<span class="xHuge_area0 endline">
-			<tr:iterator id="fileSearchHitIterator" var="hit" value="#{item.searchHits}" rendered="#{item.hasSearchHits}" binding="#{ViewItemMedium.fileSearchHitIterator}" varStatus="index" >
-				<h:panelGroup styleClass="xHuge_area0 endline">
-					<h:outputText value="#{hit.beforeSearchHitString}"/>
-					<h:outputText styleClass="searchHit" value="#{hit.searchHitString}"/>
-					<h:outputText value="#{hit.afterSearchHitString}"/>
+			
+			<tr:iterator value="#{item.fileBeanList}" var="fileBean" varStatus="index">
+				<h:panelGroup styleClass="xHuge_area0 endline" rendered="#{fileBean.showSearchHits}">
+					<tr:goLink id="lnkSearchHitsURL" targetFrame="." destination="#{item.link}/component/#{fileBean.file.reference.objectId}/#{fileBean.file.name}#search=#{fileBean.openPDFSearchParameter}" shortDesc="#{fileBean.file.description}">
+						<h:outputText value="#{fileBean.fileName}"/>
+					</tr:goLink>
+					<br/>
+					<tr:iterator id="fileSearchHitIterator" var="hit" value="#{fileBean.searchHits}" varStatus="index" >
+							<h:outputText value="#{hit.beforeSearchHitString}"/>
+							<h:outputText styleClass="searchHit" value="#{hit.searchHitString}"/>
+							<h:outputText value="#{hit.afterSearchHitString}"/>
+					</tr:iterator>
 				</h:panelGroup>
 			</tr:iterator>
 		</span>
